@@ -1,5 +1,6 @@
 Version 8.20 (Unreleased)
 -------------------------
+- Make BitBucket repositories enabled by default
 - Add raw data toggle for Additional Data
 - Improved function name resolving for JavaScript sourcemaps
 
